--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,131 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600,700,800');
+* {
+  box-sizing: border-box;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background: #b7d3ee !important;
+  /* min-height: 100vh; */
+  display: flex;
+  font-weight: 400;
+  font-family: 'Fira Sans', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1, h2, h3, h4, h5, h6, label, span {
+  font-weight: 500;
+  font-family: 'Fira Sans', sans-serif;
+}
+
+body, html, .App, #root, .auth-wrapper {
+  width: 100%;
+  height: 100%;
+}
+.navbar-light {
+  background-color: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+}
+.auth-wrapper {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: left;
+}
+.auth-inner {
+  min-width: 450px;
+  margin: auto;
+  background: #ffffff;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  padding: 40px 55px 45px 55px;
+  border-radius: 15px;
+  /* transition: all .3s; */
+}
+.auth-wrapper .form-control:focus {
+  border-color: #167bff;
+  box-shadow: none;
+}
+.auth-wrapper h3 {
+  text-align: center;
+  margin: 0;
+  line-height: 1;
+  padding-bottom: 20px;
+}
+.admin-box {
+  margin-top: 60px;
+  text-align: left;
+  padding-left: 5%;
+  padding-top: 2%;
+  padding-right: 5%;
+  padding-bottom: 3%;
+}
+h5 {
+  color: rgb(255, 255, 255);
+}
+.tabdet:hover {
+  background-color: #4c95f5;
+}
+.button-todo button {
+  margin-right: 5%;
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 2%;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  border-radius: 10px;
+  background-color: honeydew;
+}
+.button-todo button:hover {
+  font-weight: 500 !important;
+  background-color: rgb(212, 252, 212);
+}
+.insertform {
+  /* border: 2px solid red; */
+  margin-top: 3%;
+}
+button {
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
+  border-radius: 10px;
+  background-color: honeydew;
+}
+button:hover {
+  font-weight: 500 !important;
+  background-color: rgb(212, 252, 212);
+}
+/* .box {
+  border: 2px solid green;
+} */
+.eachbox {
+  margin-bottom: 20px;
+}
+.admin-box h4 {
+  text-decoration: underline;
+}
+.admin-box input {
+  width: 40%;
+  margin-bottom: 1%;
+  height: 40px;
+}
+.editform {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-align: center;
+}
+.editform input {
+  margin-right: 2%;
+  margin-top: 0.5%;
+}
+.editform button {
+  padding-top: 0;
+  padding-bottom: 0;
+  height: 50px;
+}
+.labeltitle {
+  font-weight: 700 !important;
+  margin-right: 3%;
 }
